# multifil_jax

./: .gitattributes  .gitignore  README.md  pyproject.toml  session_summary.txt
benchmarking/: benchmark_dynamic_ls.py  benchmark_minibatch.py  profile_jax.py
docs/: CODE_Architecture.md  INSTALL.md  README.md
examples/: dynamic_lattice_spacing.py  hysteresis.py  quickstart.py  sinusoidal_analysis.py  stiffness_sweep_cardiac.py  test.py
examples/benchmarks/: benchmark_dynamic_ls.py  benchmark_minibatch.py  profile_jax.py
examples/sinusoidal_analysis/: sinusoidal_analysis.py
multifil_jax/: __init__.py  helper.py  metrics_fn.py  simulation.py  timestep.py
multifil_jax/core/: __init__.py  params.py  sarc_geometry.py  state.py
multifil_jax/kernels/: __init__.py  cooperativity.py  forces.py  geometry.py  rate_functions.py  solver.py  transitions.py
multifil_jax/utils/: __init__.py  hardware.py
